compiler/tools/fpp-check/test/container/duplicate_name.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/container/duplicate_name.fpp:4.3
  product container C
  ^
error: duplicate container name C
previous occurrence is here:
[ local path prefix ]/compiler/tools/fpp-check/test/container/duplicate_name.fpp:3.3
  product container C
  ^
